--- a/src/task2/ResultFXML.fxml
+++ b/src/task2/ResultFXML.fxml
@@ -4,12 +4,11 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<Pane prefHeight="500.0" prefWidth="900.0" style="-fx-background-image: url(&quot;tagliere2.jpg&quot;); -fx-background-size: cover;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="task2.ResultController">
+<Pane prefHeight="500.0" prefWidth="900.0" style="-fx-background-image: url(&quot;food3.jpg&quot;); -fx-background-size: contain;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="task2.ResultController">
    <children>
-      <Label layoutX="458.0" layoutY="58.0" text="Analysis result" textFill="#f2a501">
+      <Label layoutX="23.0" layoutY="8.0" prefHeight="43.0" prefWidth="222.0" text="Analysis result" textFill="#f2a501">
          <font>
-            <Font name="Maiandra GD" size="33.0" />
+            <Font name="Maiandra GD" size="35.0" />
          </font>
       </Label>
    </children>
