--- a/src/task2/RegistrationFXML.fxml
+++ b/src/task2/RegistrationFXML.fxml
@@ -54,7 +54,7 @@
             <Font size="15.0" />
          </font>
       </TextField>
-      <TextField fx:id="address_field1" alignment="CENTER" layoutX="82.0" layoutY="191.0" promptText="Address">
+      <TextField fx:id="address_field" alignment="CENTER" layoutX="82.0" layoutY="191.0" promptText="Address">
          <font>
             <Font size="15.0" />
          </font>
