--- a/src/task2/RegistrationFXML.fxml
+++ b/src/task2/RegistrationFXML.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="350.0" style="-fx-background-image: url(&quot;login.jpg&quot;); -fx-background-size: contain;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="task2.RegistrationController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="350.0" style="-fx-background-image: url(&quot;login.jpg&quot;); -fx-background-size: contain;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="task2.RegistrationController">
    <children>
       <Label layoutX="51.0" layoutY="14.0" prefHeight="40.0" prefWidth="248.0" text="Fill the following fields" textFill="#f2a501">
          <font>
@@ -54,7 +54,7 @@
             <Font size="15.0" />
          </font>
       </TextField>
-      <TextField fx:id="address_field1" alignment="CENTER" layoutX="82.0" layoutY="191.0" promptText="Address">
+      <TextField fx:id="address_field" alignment="CENTER" layoutX="82.0" layoutY="191.0" promptText="Address">
          <font>
             <Font size="15.0" />
          </font>
