--- a/src/task2/CompanyFXML.fxml
+++ b/src/task2/CompanyFXML.fxml
@@ -1,6 +1,97 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="577.0" prefWidth="736.0" style="-fx-background-image: url(&quot;a.jpg&quot;); -fx-background-size: cover;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="task2.CompanyController" />
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="520.0" prefWidth="800.0" style="-fx-background-image: url(&quot;a2.jpg&quot;); -fx-background-size: cover;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="task2.CompanyController">
+   <children>
+      <Button layoutX="65.0" layoutY="431.0" mnemonicParsing="false" onAction="#logout" style="-fx-background-color: #eaa822;" text="Logout" textFill="WHITE">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
+      <Label layoutX="65.0" layoutY="64.0" prefHeight="40.0" prefWidth="117.0" text="Username:" textFill="#f2a501">
+         <font>
+            <Font name="Maiandra GD" size="21.0" />
+         </font>
+      </Label>
+      <Label layoutX="65.0" layoutY="104.0" prefHeight="40.0" prefWidth="94.0" text="Password:" textFill="#f2a501">
+         <font>
+            <Font name="Maiandra GD" size="21.0" />
+         </font>
+      </Label>
+      <Label layoutX="64.0" layoutY="142.0" prefHeight="40.0" prefWidth="168.0" text="Company name:" textFill="#f2a501">
+         <font>
+            <Font name="Maiandra GD" size="21.0" />
+         </font>
+      </Label>
+      <Label layoutX="65.0" layoutY="182.0" prefHeight="40.0" prefWidth="94.0" text="Address:" textFill="#f2a501">
+         <font>
+            <Font name="Maiandra GD" size="21.0" />
+         </font>
+      </Label>
+      <Label layoutX="65.0" layoutY="218.0" prefHeight="40.0" prefWidth="94.0" text="Country:" textFill="#f2a501">
+         <font>
+            <Font name="Maiandra GD" size="21.0" />
+         </font>
+      </Label>
+      <Label layoutX="65.0" layoutY="252.0" prefHeight="40.0" prefWidth="94.0" text="Email:" textFill="#f2a501">
+         <font>
+            <Font name="Maiandra GD" size="21.0" />
+         </font>
+      </Label>
+      <Label layoutX="65.0" layoutY="287.0" prefHeight="40.0" prefWidth="94.0" text="Number:" textFill="#f2a501">
+         <font>
+            <Font name="Maiandra GD" size="21.0" />
+         </font>
+      </Label>
+      <Label layoutX="65.0" layoutY="323.0" prefHeight="40.0" prefWidth="132.0" text="Core business:" textFill="#f2a501">
+         <font>
+            <Font name="Maiandra GD" size="21.0" />
+         </font>
+      </Label>
+      <Label fx:id="username_field" layoutX="182.0" layoutY="64.0" prefHeight="40.0" prefWidth="324.0" textFill="#f2a501">
+         <font>
+            <Font name="Maiandra GD" size="21.0" />
+         </font>
+      </Label>
+      <Label fx:id="password_field" layoutX="182.0" layoutY="104.0" prefHeight="40.0" prefWidth="324.0" textFill="#f2a501">
+         <font>
+            <Font name="Maiandra GD" size="21.0" />
+         </font>
+      </Label>
+      <Label fx:id="company_field" layoutX="232.0" layoutY="142.0" prefHeight="40.0" prefWidth="324.0" textFill="#f2a501">
+         <font>
+            <Font name="Maiandra GD" size="21.0" />
+         </font>
+      </Label>
+      <Label fx:id="address_field" layoutX="159.0" layoutY="182.0" prefHeight="40.0" prefWidth="324.0" textFill="#f2a501">
+         <font>
+            <Font name="Maiandra GD" size="21.0" />
+         </font>
+      </Label>
+      <Label fx:id="country_field" layoutX="159.0" layoutY="218.0" prefHeight="40.0" prefWidth="324.0" textFill="#f2a501">
+         <font>
+            <Font name="Maiandra GD" size="21.0" />
+         </font>
+      </Label>
+      <Label fx:id="email_field" layoutX="137.0" layoutY="252.0" prefHeight="40.0" prefWidth="324.0" textFill="#f2a501">
+         <font>
+            <Font name="Maiandra GD" size="21.0" />
+         </font>
+      </Label>
+      <Label fx:id="number_field" layoutX="159.0" layoutY="287.0" prefHeight="40.0" prefWidth="324.0" textFill="#f2a501">
+         <font>
+            <Font name="Maiandra GD" size="21.0" />
+         </font>
+      </Label>
+      <Label fx:id="business_field" layoutX="207.0" layoutY="323.0" prefHeight="40.0" prefWidth="324.0" textFill="#f2a501">
+         <font>
+            <Font name="Maiandra GD" size="21.0" />
+         </font>
+      </Label>
+   </children>
+</Pane>
