--- a/src/task2/CompanyFXML.fxml
+++ b/src/task2/CompanyFXML.fxml
@@ -5,25 +5,19 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="520.0" prefWidth="800.0" style="-fx-background-image: url(&quot;a2.jpg&quot;); -fx-background-size: cover;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="task2.CompanyController">
    <children>
-      <Button layoutX="65.0" layoutY="431.0" mnemonicParsing="false" onAction="#logout" style="-fx-background-color: #eaa822;" text="Logout" textFill="WHITE">
+      <Button fx:id="logout_button" layoutX="65.0" layoutY="431.0" mnemonicParsing="false" onAction="#logout" style="-fx-background-color: #eaa822;" text="Logout" textFill="WHITE">
          <font>
             <Font size="16.0" />
          </font>
       </Button>
-      <Label layoutX="65.0" layoutY="64.0" prefHeight="40.0" prefWidth="117.0" text="Username:" textFill="#f2a501">
+      <Label layoutX="65.0" layoutY="118.0" prefHeight="40.0" prefWidth="117.0" text="Username:" textFill="#f2a501">
          <font>
             <Font name="Maiandra GD" size="21.0" />
          </font>
       </Label>
-      <Label layoutX="65.0" layoutY="104.0" prefHeight="40.0" prefWidth="94.0" text="Password:" textFill="#f2a501">
-         <font>
-            <Font name="Maiandra GD" size="21.0" />
-         </font>
-      </Label>
-      <Label layoutX="64.0" layoutY="142.0" prefHeight="40.0" prefWidth="168.0" text="Company name:" textFill="#f2a501">
+      <Label layoutX="65.0" layoutY="149.0" prefHeight="40.0" prefWidth="168.0" text="Company name:" textFill="#f2a501">
          <font>
             <Font name="Maiandra GD" size="21.0" />
          </font>
@@ -48,17 +42,12 @@
             <Font name="Maiandra GD" size="21.0" />
          </font>
       </Label>
-      <Label layoutX="65.0" layoutY="323.0" prefHeight="40.0" prefWidth="132.0" text="Core business:" textFill="#f2a501">
+      <Label layoutX="65.0" layoutY="323.0" prefHeight="40.0" prefWidth="142.0" text="Core business:" textFill="#f2a501">
          <font>
             <Font name="Maiandra GD" size="21.0" />
          </font>
       </Label>
-      <Label fx:id="username_field" layoutX="182.0" layoutY="64.0" prefHeight="40.0" prefWidth="324.0" textFill="#f2a501">
-         <font>
-            <Font name="Maiandra GD" size="21.0" />
-         </font>
-      </Label>
-      <Label fx:id="password_field" layoutX="182.0" layoutY="104.0" prefHeight="40.0" prefWidth="324.0" textFill="#f2a501">
+      <Label fx:id="username_field" layoutX="182.0" layoutY="118.0" prefHeight="40.0" prefWidth="324.0" textFill="#f2a501">
          <font>
             <Font name="Maiandra GD" size="21.0" />
          </font>
@@ -93,5 +82,15 @@
             <Font name="Maiandra GD" size="21.0" />
          </font>
       </Label>
+      <Label layoutX="213.0" layoutY="55.0" text="Personal page" textFill="#f2a501">
+         <font>
+            <Font name="Maiandra GD" size="31.0" />
+         </font>
+      </Label>
+      <Button fx:id="modify_button" layoutX="196.0" layoutY="431.0" mnemonicParsing="false" onAction="#modify" style="-fx-background-color: #eaa822;" text="Modify" textFill="WHITE">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
    </children>
 </Pane>
