--- a/src/task2/CompanyFXML.fxml
+++ b/src/task2/CompanyFXML.fxml
@@ -2,10 +2,12 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="520.0" prefWidth="800.0" style="-fx-background-image: url(&quot;a2.jpg&quot;); -fx-background-size: cover;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="task2.CompanyController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#fileChooser" prefHeight="520.0" prefWidth="800.0" style="-fx-background-image: url(&quot;a2.jpg&quot;); -fx-background-size: cover;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="task2.CompanyController">
    <children>
       <Button fx:id="logout_button" layoutX="65.0" layoutY="431.0" mnemonicParsing="false" onAction="#logout" style="-fx-background-color: #eaa822;" text="Logout" textFill="WHITE">
          <font>
@@ -92,5 +94,10 @@
             <Font size="16.0" />
          </font>
       </Button>
+      <ImageView fitHeight="98.0" fitWidth="117.0" layoutX="331.0" layoutY="385.0" onMouseClicked="#fileChooser" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../Desktop/document-upload-icon-16.jpeg" />
+         </image>
+      </ImageView>
    </children>
 </Pane>
