--- a/src/task2/CompanyFXML.fxml
+++ b/src/task2/CompanyFXML.fxml
@@ -7,14 +7,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#fileChooser" prefHeight="520.0" prefWidth="800.0" style="-fx-background-image: url(&quot;a2.jpg&quot;); -fx-background-size: cover;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="task2.CompanyController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#fileChooser" prefHeight="520.0" prefWidth="800.0" style="-fx-background-image: url(&quot;a2.jpg&quot;); -fx-background-size: cover;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="task2.CompanyController">
    <children>
-      <Button fx:id="logout_button" layoutX="65.0" layoutY="431.0" mnemonicParsing="false" onAction="#logout" style="-fx-background-color: #eaa822;" text="Logout" textFill="WHITE">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Label layoutX="65.0" layoutY="118.0" prefHeight="40.0" prefWidth="117.0" text="Username:" textFill="#f2a501">
+      <Label layoutX="65.0" layoutY="109.0" prefHeight="40.0" prefWidth="117.0" text="Username:" textFill="#f2a501">
          <font>
             <Font name="Maiandra GD" size="21.0" />
          </font>
@@ -24,62 +19,62 @@
             <Font name="Maiandra GD" size="21.0" />
          </font>
       </Label>
-      <Label layoutX="65.0" layoutY="182.0" prefHeight="40.0" prefWidth="94.0" text="Address:" textFill="#f2a501">
+      <Label layoutX="65.0" layoutY="190.0" prefHeight="40.0" prefWidth="94.0" text="Address:" textFill="#f2a501">
          <font>
             <Font name="Maiandra GD" size="21.0" />
          </font>
       </Label>
-      <Label layoutX="65.0" layoutY="218.0" prefHeight="40.0" prefWidth="94.0" text="Country:" textFill="#f2a501">
+      <Label layoutX="65.0" layoutY="230.0" prefHeight="40.0" prefWidth="94.0" text="Country:" textFill="#f2a501">
          <font>
             <Font name="Maiandra GD" size="21.0" />
          </font>
       </Label>
-      <Label layoutX="65.0" layoutY="252.0" prefHeight="40.0" prefWidth="94.0" text="Email:" textFill="#f2a501">
+      <Label layoutX="65.0" layoutY="269.0" prefHeight="40.0" prefWidth="94.0" text="Email:" textFill="#f2a501">
          <font>
             <Font name="Maiandra GD" size="21.0" />
          </font>
       </Label>
-      <Label layoutX="65.0" layoutY="287.0" prefHeight="40.0" prefWidth="94.0" text="Number:" textFill="#f2a501">
+      <Label layoutX="65.0" layoutY="309.0" prefHeight="40.0" prefWidth="94.0" text="Number:" textFill="#f2a501">
          <font>
             <Font name="Maiandra GD" size="21.0" />
          </font>
       </Label>
-      <Label layoutX="65.0" layoutY="323.0" prefHeight="40.0" prefWidth="142.0" text="Core business:" textFill="#f2a501">
+      <Label layoutX="66.0" layoutY="349.0" prefHeight="40.0" prefWidth="142.0" text="Core business:" textFill="#f2a501">
          <font>
             <Font name="Maiandra GD" size="21.0" />
          </font>
       </Label>
-      <Label fx:id="username_field" layoutX="182.0" layoutY="118.0" prefHeight="40.0" prefWidth="324.0" textFill="#f2a501">
+      <Label fx:id="username_field" layoutX="208.0" layoutY="109.0" prefHeight="40.0" prefWidth="324.0" textFill="#f2a501">
          <font>
             <Font name="Maiandra GD" size="21.0" />
          </font>
       </Label>
-      <Label fx:id="company_field" layoutX="232.0" layoutY="142.0" prefHeight="40.0" prefWidth="324.0" textFill="#f2a501">
+      <Label fx:id="company_field" layoutX="256.0" layoutY="149.0" prefHeight="40.0" prefWidth="324.0" textFill="#f2a501">
          <font>
             <Font name="Maiandra GD" size="21.0" />
          </font>
       </Label>
-      <Label fx:id="address_field" layoutX="159.0" layoutY="182.0" prefHeight="40.0" prefWidth="324.0" textFill="#f2a501">
+      <Label fx:id="address_field" layoutX="182.0" layoutY="190.0" prefHeight="40.0" prefWidth="324.0" textFill="#f2a501">
          <font>
             <Font name="Maiandra GD" size="21.0" />
          </font>
       </Label>
-      <Label fx:id="country_field" layoutX="159.0" layoutY="218.0" prefHeight="40.0" prefWidth="324.0" textFill="#f2a501">
+      <Label fx:id="country_field" layoutX="182.0" layoutY="230.0" prefHeight="40.0" prefWidth="324.0" textFill="#f2a501">
          <font>
             <Font name="Maiandra GD" size="21.0" />
          </font>
       </Label>
-      <Label fx:id="email_field" layoutX="137.0" layoutY="252.0" prefHeight="40.0" prefWidth="324.0" textFill="#f2a501">
+      <Label fx:id="email_field" layoutX="169.0" layoutY="267.0" prefHeight="40.0" prefWidth="324.0" textFill="#f2a501">
          <font>
             <Font name="Maiandra GD" size="21.0" />
          </font>
       </Label>
-      <Label fx:id="number_field" layoutX="159.0" layoutY="287.0" prefHeight="40.0" prefWidth="324.0" textFill="#f2a501">
+      <Label fx:id="number_field" layoutX="182.0" layoutY="309.0" prefHeight="40.0" prefWidth="324.0" textFill="#f2a501">
          <font>
             <Font name="Maiandra GD" size="21.0" />
          </font>
       </Label>
-      <Label fx:id="business_field" layoutX="207.0" layoutY="323.0" prefHeight="40.0" prefWidth="324.0" textFill="#f2a501">
+      <Label fx:id="business_field" layoutX="244.0" layoutY="349.0" prefHeight="40.0" prefWidth="324.0" textFill="#f2a501">
          <font>
             <Font name="Maiandra GD" size="21.0" />
          </font>
@@ -89,6 +84,11 @@
             <Font name="Maiandra GD" size="31.0" />
          </font>
       </Label>
+      <Button fx:id="logout_button" layoutX="65.0" layoutY="431.0" mnemonicParsing="false" onAction="#logout" style="-fx-background-color: #eaa822;" text="Logout" textFill="WHITE">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
       <Button fx:id="modify_button" layoutX="196.0" layoutY="431.0" mnemonicParsing="false" onAction="#modify" style="-fx-background-color: #eaa822;" text="Modify" textFill="WHITE">
          <font>
             <Font size="16.0" />
@@ -99,5 +99,10 @@
             <Image url="@../../../../Desktop/document-upload-icon-16.jpeg" />
          </image>
       </ImageView>
+      <Button fx:id="delete_button" layoutX="616.0" layoutY="431.0" mnemonicParsing="false" onAction="#deleteAccount" style="-fx-background-color: red;" text="Delete account" textFill="WHITE">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
    </children>
 </Pane>
