--- a/src/task2/DocumentFXML.fxml
+++ b/src/task2/DocumentFXML.fxml
@@ -56,9 +56,9 @@
             <Font size="16.0" />
          </font>
       </Button>
-      <Label layoutX="471.0" layoutY="213.0" text="Search by country">
+      <Label layoutX="471.0" layoutY="213.0" text="Search by country" textFill="WHITE">
          <font>
-            <Font name="System Italic" size="10.0" />
+            <Font name="System Italic" size="12.0" />
          </font>
       </Label>
    </children>
