--- a/src/task2/DocumentFXML.fxml
+++ b/src/task2/DocumentFXML.fxml
@@ -33,7 +33,7 @@
       </RadioButton>
       <ComboBox fx:id="continent_comboBox" layoutX="309.0" layoutY="218.0" prefHeight="38.0" prefWidth="126.0" promptText="Region" />
       <TextField fx:id="search_field" layoutX="471.0" layoutY="229.0" prefHeight="27.0" prefWidth="126.0" promptText="Search" />
-      <TextField fx:id="start_date" layoutX="309.0" layoutY="288.0" prefHeight="40.0" prefWidth="126.0" promptText="Start year" />
+      <TextField fx:id="start_date" layoutX="309.0" layoutY="288.0" prefHeight="40.0" prefWidth="126.0" promptText="Start year from 1961" />
       <TextField fx:id="end_date" layoutX="471.0" layoutY="288.0" prefHeight="40.0" prefWidth="126.0" promptText="End year" />
       <ComboBox fx:id="aggregation" layoutX="309.0" layoutY="359.0" prefHeight="38.0" prefWidth="126.0" promptText="Aggregation" />
       <Button layoutX="498.0" layoutY="360.0" mnemonicParsing="false" onAction="#submit" style="-fx-background-color: #eaa822;" text="Submit" textFill="WHITE">
