--- a/src/task2/ResultFXML.fxml
+++ b/src/task2/ResultFXML.fxml
@@ -8,14 +8,14 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="670.0" prefWidth="1005.0" style="-fx-background-image: url(&quot;salsa.jpg&quot;); -fx-background-size: contain;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="task2.ResultController">
+<Pane prefHeight="670.0" prefWidth="1005.0" style="-fx-background-image: url(&quot;salsa.jpg&quot;); -fx-background-size: contain;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="task2.ResultController">
    <children>
       <Label layoutX="410.0" prefHeight="43.0" prefWidth="222.0" text="Analysis result" textFill="#f2a501">
          <font>
             <Font name="Maiandra GD" size="35.0" />
          </font>
       </Label>
-      <BarChart fx:id="parameterChart" alternativeRowFillVisible="false" horizontalGridLinesVisible="false" horizontalZeroLineVisible="false" layoutX="511.0" layoutY="88.0" prefHeight="254.0" prefWidth="327.0" verticalGridLinesVisible="false" verticalZeroLineVisible="false">
+      <BarChart fx:id="parameterChart" alternativeRowFillVisible="false" horizontalGridLinesVisible="false" horizontalZeroLineVisible="false" layoutX="606.0" layoutY="85.0" prefHeight="254.0" prefWidth="327.0" verticalGridLinesVisible="false" verticalZeroLineVisible="false">
         <xAxis>
           <CategoryAxis fx:id="param_yearX" prefHeight="39.0" prefWidth="270.0" side="BOTTOM" tickLabelFill="#f2a501" tickLabelRotation="90.0">
                <tickLabelFont>
@@ -57,23 +57,29 @@
                </tickLabelFont></NumberAxis>
          </yAxis>
       </BarChart>
-      <Label layoutX="391.0" layoutY="347.0" prefHeight="43.0" prefWidth="203.0" text="Temperature (C°)" textFill="#f2a501">
+      <Label layoutX="354.0" layoutY="347.0" prefHeight="43.0" prefWidth="203.0" text="Temperature (C°)" textFill="#f2a501">
          <font>
             <Font name="Maiandra GD" size="25.0" />
          </font>
       </Label>
-      <Label layoutX="719.0" layoutY="347.0" prefHeight="43.0" prefWidth="222.0" text="Precipitations (mm)" textFill="#f2a501">
+      <Label layoutX="693.0" layoutY="347.0" prefHeight="43.0" prefWidth="222.0" text="Precipitations (mm)" textFill="#f2a501">
          <font>
             <Font name="Maiandra GD" size="25.0" />
          </font>
       </Label>
-      <Label fx:id="parameterLabel" alignment="CENTER" layoutX="521.0" layoutY="63.0" prefHeight="43.0" prefWidth="342.0" textFill="#f2a501">
+      <Label fx:id="parameterLabel" alignment="CENTER" layoutX="617.0" layoutY="58.0" prefHeight="43.0" prefWidth="342.0" textFill="#f2a501">
          <font>
             <Font name="Maiandra GD" size="25.0" />
          </font>
       </Label>
-      <Label fx:id="objectiveLabel" layoutX="68.0" layoutY="400.0" prefHeight="17.0" prefWidth="102.0" style="-fx-background-color: orange;" text="_" />
-      <Label fx:id="resultLabel" layoutX="68.0" layoutY="435.0" prefHeight="17.0" prefWidth="102.0" style="-fx-background-color: orange;" text="_" textAlignment="CENTER" />
-      <PieChart fx:id="pieChart" layoutX="44.0" layoutY="71.0" prefHeight="254.0" prefWidth="310.0" style="-fx-background-color: yellow;" title="Pie Chart" />
+      <Label fx:id="objectiveLabel" alignment="CENTER" layoutX="356.0" layoutY="114.0" prefHeight="30.0" prefWidth="255.0" text="_" textFill="#f2a501">
+         <font>
+            <Font name="Maiandra GD" size="25.0" />
+         </font></Label>
+      <Label fx:id="resultLabel" alignment="CENTER" layoutX="352.0" layoutY="137.0" prefHeight="30.0" prefWidth="262.0" text="_" textAlignment="CENTER" textFill="#f2a501">
+         <font>
+            <Font name="Maiandra GD" size="25.0" />
+         </font></Label>
+      <PieChart fx:id="pieChart" layoutX="270.0" layoutY="45.0" prefHeight="301.0" prefWidth="371.0" />
    </children>
 </Pane>
