--- a/src/task2/ResultFXML.fxml
+++ b/src/task2/ResultFXML.fxml
@@ -9,86 +9,102 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="800.0" prefWidth="1200.0" style="-fx-background-image: url(&quot;salsa.jpg&quot;); -fx-background-size: contain;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="task2.ResultController">
+<Pane prefHeight="800.0" prefWidth="1200.0" style="-fx-background-image: url(&quot;Analytics2.jpg&quot;); -fx-background-size: contain;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="task2.ResultController">
    <children>
-      <Label layoutX="489.0" layoutY="7.0" prefHeight="43.0" prefWidth="222.0" text="Analysis result" textFill="#f2a501">
+      <Label fx:id="title" alignment="CENTER" layoutX="559.0" layoutY="20.0" prefHeight="45.0">
          <font>
-            <Font name="Maiandra GD" size="35.0" />
+            <Font name="System Bold" size="30.0" />
          </font>
       </Label>
-      <BarChart fx:id="parameterChart" alternativeRowFillVisible="false" horizontalGridLinesVisible="false" horizontalZeroLineVisible="false" layoutX="725.0" layoutY="124.0" prefHeight="301.0" prefWidth="391.0" verticalGridLinesVisible="false" verticalZeroLineVisible="false">
+      <Label fx:id="objectiveLabel" alignment="CENTER" layoutX="302.0" layoutY="65.0" prefHeight="36.0" prefWidth="298.0" text="_" textAlignment="RIGHT">
+         <font>
+            <Font name="Maiandra GD" size="25.0" />
+         </font>
+      </Label>
+      <Label fx:id="resultLabel" alignment="CENTER" layoutX="600.0" layoutY="65.0" prefHeight="36.0" prefWidth="342.0" text="_">
+         <font>
+            <Font name="Maiandra GD" size="25.0" />
+         </font>
+      </Label>
+      <PieChart fx:id="pieChart" layoutX="20.0" layoutY="94.0" prefHeight="386.0" prefWidth="614.0" />
+      <Label fx:id="parameterLabel" alignment="CENTER" layoutX="717.0" layoutY="119.0" prefHeight="43.0" prefWidth="342.0">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Label>
+      <BarChart fx:id="parameterChart" alternativeRowFillVisible="false" horizontalGridLinesVisible="false" horizontalZeroLineVisible="false" layoutX="642.0" layoutY="155.0" prefHeight="277.0" prefWidth="491.0" verticalGridLinesVisible="false" verticalZeroLineVisible="false">
         <xAxis>
-          <CategoryAxis fx:id="param_yearX" prefHeight="39.0" prefWidth="270.0" side="BOTTOM" tickLabelFill="#f2a501" tickLabelRotation="90.0">
+          <CategoryAxis fx:id="param_yearX" prefHeight="39.0" prefWidth="270.0" side="BOTTOM" tickLabelRotation="90.0">
                <tickLabelFont>
                   <Font size="12.0" />
                </tickLabelFont>
             </CategoryAxis>
         </xAxis>
         <yAxis>
-          <NumberAxis fx:id="param_valueY" side="LEFT" tickLabelFill="#f2a501">
+          <NumberAxis fx:id="param_valueY" side="LEFT">
                <tickLabelFont>
                   <Font size="12.0" />
                </tickLabelFont>
             </NumberAxis>
         </yAxis>
       </BarChart>
-      <Label layoutX="442.0" layoutY="479.0" prefHeight="43.0" prefWidth="203.0" text="Temperature (C°)" textFill="#f2a501">
+      <Label layoutX="173.0" layoutY="479.0" prefHeight="43.0" prefWidth="203.0" text="Temperature (C°)">
          <font>
             <Font name="Maiandra GD" size="25.0" />
          </font>
       </Label>
-      <Label layoutX="825.0" layoutY="479.0" prefHeight="43.0" prefWidth="222.0" text="Precipitations (mm)" textFill="#f2a501">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <Label fx:id="parameterLabel" alignment="CENTER" layoutX="765.0" layoutY="89.0" prefHeight="43.0" prefWidth="342.0" textFill="#f2a501">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <Label fx:id="objectiveLabel" alignment="CENTER" layoutX="302.0" layoutY="53.0" prefHeight="36.0" prefWidth="298.0" text="_" textFill="#f2a501">
-         <font>
-            <Font name="Maiandra GD" size="25.0" />
-         </font>
-      </Label>
-      <Label fx:id="resultLabel" alignment="CENTER" layoutX="600.0" layoutY="53.0" prefHeight="36.0" prefWidth="168.0" text="_" textFill="#f2a501">
-         <font>
-            <Font name="Maiandra GD" size="25.0" />
-         </font>
-      </Label>
-      <PieChart fx:id="pieChart" layoutX="358.0" layoutY="124.0" prefHeight="301.0" prefWidth="371.0" />
-      <LineChart fx:id="tempChart" createSymbols="false" layoutX="334.0" layoutY="518.0" prefHeight="243.0" prefWidth="391.0">
+      <LineChart fx:id="tempLineChart" createSymbols="false" layoutX="29.0" layoutY="518.0" prefHeight="277.0" prefWidth="491.0">
         <xAxis>
-          <CategoryAxis side="BOTTOM" tickLabelFill="#f2a501">
+          <CategoryAxis side="BOTTOM">
                <tickLabelFont>
                   <Font size="12.0" />
                </tickLabelFont>
             </CategoryAxis>
         </xAxis>
         <yAxis>
-          <NumberAxis side="LEFT" tickLabelFill="#f2a501" tickLabelGap="5.0">
+          <NumberAxis side="LEFT" tickLabelGap="5.0">
                <tickLabelFont>
                   <Font size="12.0" />
                </tickLabelFont>
             </NumberAxis>
         </yAxis>
       </LineChart>
-      <LineChart fx:id="rainChart" createSymbols="false" layoutX="741.0" layoutY="518.0" prefHeight="243.0" prefWidth="391.0">
+      <BarChart fx:id="tempBarChart" layoutX="29.0" layoutY="518.0" prefHeight="277.0" prefWidth="491.0">
         <xAxis>
-          <CategoryAxis side="BOTTOM" tickLabelFill="#f2a501" tickLabelGap="5.0">
+          <CategoryAxis side="BOTTOM" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis side="LEFT" />
+        </yAxis>
+      </BarChart>
+      <Label layoutX="777.0" layoutY="479.0" prefHeight="43.0" prefWidth="222.0" text="Precipitations (mm)">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Label>
+      <LineChart fx:id="rainLineChart" createSymbols="false" layoutX="642.0" layoutY="518.0" prefHeight="277.0" prefWidth="491.0">
+        <xAxis>
+          <CategoryAxis side="BOTTOM" tickLabelGap="5.0">
                <tickLabelFont>
                   <Font size="12.0" />
                </tickLabelFont>
             </CategoryAxis>
         </xAxis>
         <yAxis>
-          <NumberAxis side="LEFT" tickLabelFill="#f2a501" tickLabelGap="5.0">
+          <NumberAxis side="LEFT" tickLabelGap="5.0">
                <tickLabelFont>
                   <Font size="12.0" />
                </tickLabelFont>
             </NumberAxis>
         </yAxis>
       </LineChart>
+      <BarChart fx:id="rainBarChart" layoutX="643.0" layoutY="518.0" prefHeight="277.0" prefWidth="491.0">
+        <xAxis>
+          <CategoryAxis side="BOTTOM" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis side="LEFT" />
+        </yAxis>
+      </BarChart>
    </children>
 </Pane>
