--- a/src/task2/LoginFXML.fxml
+++ b/src/task2/LoginFXML.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="409.0" prefWidth="337.0" style="-fx-background-image: url(&quot;login.jpg&quot;);" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="task2.LoginController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="409.0" prefWidth="337.0" style="-fx-background-image: url(&quot;login_background.jpg&quot;);" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="task2.LoginController">
    <children>
       <Label layoutX="40.0" layoutY="37.0" prefHeight="40.0" prefWidth="258.0" text="Insert your credentials" textFill="#f2a501">
          <font>
